SISRP-29226 - Fix 2-column layout for Student Overview page. Resolve missing margin on column-2 when at 1025px width in Safari

--- a/src/assets/stylesheets/_foundation_overrides.scss
+++ b/src/assets/stylesheets/_foundation_overrides.scss
@@ -6,7 +6,7 @@ $primary-color: #2683bc;
 
 // Responsive
 $small-breakpoint: (767px);
-$medium-breakpoint: (1025px);
+$medium-breakpoint: (1024px);
 $screen: "only screen";
 $small-up: $screen;
 $small-only: "#{$screen} and (max-width: #{$small-breakpoint})";
